--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
             z-index: -1;
         }
         .container {
+            animation: fadeInUp 1.5s ease-in-out;
             background: rgba(255, 255, 255, 0.2);
             padding: 30px;
             border-radius: 15px;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-            animation: fadeIn 2s ease-in-out;
             position: relative;
             z-index: 1;
             max-width: 90%;
@@ -50,6 +50,8 @@
             margin-bottom: 20px;
         }
         button {
+            transition: transform 0.3s ease, background 0.3s ease, box-shadow 0.3s ease;
+            transition: transform 0.3s ease, background 0.3s ease;
             background: #ff4e50;
             color: white;
             border: none;
@@ -65,7 +67,13 @@
         #message {
             margin-top: 20px;
             font-size: 20px;
-            animation: fadeIn 2s ease-in-out;
+            opacity: 0;
+            transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+            transform: scale(0.8);
+        }
+        .fade-in {
+            opacity: 1 !important;
+            transform: scale(1) !important;
         }
         .hidden {
             display: none;
@@ -122,8 +130,12 @@
             const romanticText = document.getElementById("romanticText");
             if (index < messages.length) {
                 romanticText.innerText = messages[index];
-                index++;
                 messageDiv.classList.remove("hidden");
+                messageDiv.classList.remove("fade-in");
+                setTimeout(() => {
+                    messageDiv.classList.add("fade-in");
+                }, 100);
+                index++;
             } else {
                 document.getElementById("mainContent").style.display = "none";
                 document.getElementById("closingMessage").style.display = "flex";
@@ -135,16 +147,6 @@
             document.getElementById("closingMessage").style.display = "none";
             document.getElementById("mainContent").style.display = "block";
             document.getElementById("message").classList.add("hidden");
-        });
-
-        document.addEventListener("DOMContentLoaded", function() {
-            const audio = document.querySelector("audio");
-            audio.play().catch(() => {
-                console.log("Autoplay dicegah, menunggu interaksi pengguna.");
-                document.body.addEventListener("click", () => {
-                    audio.play();
-                }, { once: true });
-            });
         });
     </script>
 </body>
