--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Mansiv</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="love.png">
     <script defer src="script.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
@@ -156,7 +156,6 @@
             audio.play();
         }, { once: true });
     });
-});
     </script>
 </body>
 </html>
